--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
+    "random-fruits-name": "^1.10.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.1",
